# Zumka

./: .gitignore  .gitmodules  README.en.md  README.md  generate_protos.py  pyproject.toml
doc/: StreamingResponse.json  speech_recognition.md
src/google/api/: http_pb2.pyi
src/google/rpc/: status_pb2_grpc.py
src/yandex/cloud/ai/stt/v3/: stt_service_pb2_grpc.py
src/zumka/: main.py
src/zumka/services/stt/: speech_recognizer.py
tests/services/stt/: test_stt_from_audio_file.py
typings/yandex/dotenv/: __init__.pyi  ipython.pyi  main.pyi  parser.pyi  variables.pyi
typings/yandex/google/api/: annotations_pb2.pyi  http_pb2.pyi
typings/yandex/google/rpc/: status_pb2.pyi
typings/yandex/yandex/cloud/: validation_pb2.pyi
typings/yandex/yandex/cloud/ai/stt/v3/: stt_pb2.pyi  stt_service_pb2.pyi  stt_service_pb2_grpc.pyi
typings/yandex/yandex/cloud/api/: operation_pb2.pyi
typings/yandex/yandex/cloud/api/tools/: options_pb2.pyi
typings/yandex/yandex/cloud/operation/: operation_pb2.pyi
