[project]
name = "zumka"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitrii Chrm",email = "im.chrm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yandex-speechkit (>=1.5.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "zumka", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
